# pes6-server-manager

./: .gitmodules  CHANGELOG.md  README.md  extract.js  package-lock.json  package.json
.github/workflows/: check-update-servers.yml  deploy-f-edges.yml  fly.yml  glitch.yml  publish.yml
bd-hosts-server-pes6/indie/: config.yml  hosts
bd-hosts-server-pes6/pes6.es/: config.yml  hosts
bd-hosts-server-pes6/ps2/: config.yml  hosts
bd-hosts-server-pes6/stars/: config.yml  hosts
contexts/app/: .env.production  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
contexts/app/src/: publish.js
contexts/app/src-tauri/: Cargo.toml  tauri.conf.json
contexts/app/src-tauri/icons/: icon.icns
contexts/app/src-tauri/src/: main.rs
contexts/app/src/app/: layout.jsx  page.jsx
contexts/app/src/config/: cache.js  index.js  paths.js
contexts/app/src/hooks/: usePathPes6.js  useSerial.js  useServers.js
contexts/app/src/layouts/: Layout.jsx
contexts/app/src/libs/: hosts.js  logger.js  (+2 more)
contexts/backend/: .dockerignore  .env.template  .eslintrc.cjs  Dockerfile  fly.toml  package-lock.json  package.json
contexts/backend/src/: index.js
contexts/backend/supabase/: package-lock.json  package.json  supabase.code-workspace
contexts/cli/: .env.template  .gitignore  package-lock.json  package.json
contexts/cli/src/: cli.js  publish.js
contexts/frontend/: .env.development  astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
src/: cli.js
src/config/: cache.js  index.js
src/utils/: getHost.js  loadHost.js  openPes6.js
(+82 files in other folders)
